service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi-app   # 👈 label must match deployment.yml
  ports:
    - protocol: TCP
      port: 80          # external service port
      targetPort: 8000  # container’s internal port
  type: LoadBalancer    # 👈 makes it accessible from browser
